<resources>
    <string name="app_name">BreathingApp</string>
    <string name="achieve_btn">Achievements</string>
    <string name="home_btn">Home</string>
    <string name="result_btn">Results</string>
    <string name="num1">500</string>
    <string name="num0">0</string>
    <string name="num2">1000</string>
    <string name="num4">1500</string>
    <string name="num5">2000</string>
    <string name="num6">2500</string>
    <string name="num7">3000</string>
    <string name="num8">3500</string>
    <string name="num9">4000</string>
    <string name="num10">2250</string>
    <string name="num11">2500</string>
    <string name="current_prog_txt">CURRENT PROGRESS</string>
    <string name="daily_prog_txt">DAILY PROGRESS</string>
    <string name="setting_btn">Settings</string>
    <string name="lvl">1</string>
    <string name="lvl_text">Level:</string>
<<<<<<< HEAD
    <string name="welcome_msg">Welcome!</string>
    <string name="vals">Please enter values:</string>
=======
    <string name="Results_text">Your results for the past 5 days:</string>
>>>>>>> 6d1ffdb30a3f20329cf81d91672319024122b5c2
</resources>
