<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="368dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <View
            android:id="@+id/divider5"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="37dp"
            android:layout_height="35dp"
            android:background="@android:drawable/star_big_on"
            android:contentDescription="@string/achieve_btn"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="460dp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="37dp"
            android:layout_height="35dp"
            android:background="?attr/actionModeSelectAllDrawable"
            android:contentDescription="@string/home_btn"
            tools:layout_editor_absoluteX="174dp"
            tools:layout_editor_absoluteY="460dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="37dp"
            android:layout_height="35dp"
            android:background="@android:drawable/ic_menu_recent_history"
            android:contentDescription="@string/result_btn"
            tools:layout_editor_absoluteX="271dp"
            tools:layout_editor_absoluteY="460dp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@android:drawable/ic_menu_manage"
            android:contentDescription="@string/setting_btn" />

        <View
            android:id="@+id/divider26"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="368dp"
        android:layout_height="439dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/divider16"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/current_prog_txt"
            android:textSize="18sp" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0" />

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:max="10"
            android:progress="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <View
                android:id="@+id/divider10"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num0"
                android:textSize="12sp" />

            <View
                android:id="@+id/divider9"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num1"
                android:textSize="12sp" />

            <View
                android:id="@+id/divider11"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num2"
                android:textSize="12sp" />

            <View
                android:id="@+id/divider21"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight=".5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num4"
                android:textSize="12sp" />

            <View
                android:id="@+id/divider22"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight=".4" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num5"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num6"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num7"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num8"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num9"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num10"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/num11"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <View
                android:id="@+id/divider23"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/daily_prog_txt"
                android:textSize="18sp" />

            <View
                android:id="@+id/divider25"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/divider19"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:id="@+id/divider17"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/lvl_text"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:background="@color/colorAccent"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/lvl"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>