<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="368dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <View
            android:id="@+id/divider5"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="37dp"
            android:layout_height="35dp"
            android:background="@android:drawable/star_big_off"
            android:contentDescription="@string/achieve_btn"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="460dp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="37dp"
            android:layout_height="35dp"
            android:background="?attr/actionModeSelectAllDrawable"
            android:contentDescription="@string/home_btn"
            tools:layout_editor_absoluteX="174dp"
            tools:layout_editor_absoluteY="460dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="37dp"
            android:layout_height="35dp"
            android:background="@android:drawable/ic_menu_recent_history"
            android:contentDescription="@string/result_btn"
            tools:layout_editor_absoluteX="271dp"
            tools:layout_editor_absoluteY="460dp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@drawable/ic_action_gear"
            android:contentDescription="@string/setting_btn"
            android:src="@drawable/ic_action_gear" />

        <View
            android:id="@+id/divider26"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="368dp"
        android:layout_height="439dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/divider16"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/welcome_msg"
            android:textSize="38sp" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0" />

        <!--<SeekBar-->
        <!--android:id="@+id/seekBar"-->
        <!--style="@style/Widget.AppCompat.SeekBar.Discrete"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="0"-->
        <!--android:max="8"-->
        <!--android:progress="3" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:layout_weight="0"
            android:orientation="horizontal">


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <View
                android:id="@+id/divider23"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/vals"
                android:textSize="20sp" />


            <View
                android:id="@+id/divider19"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="   Current Min:" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:contentDescription="@string/setting_btn"
                    android:text="Enter" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="   Goal:" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Enter" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="italic" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>